kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherart-service
spec:
  selector:
    app: etherart-frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
